crates/lattice-actor/tests/ui/missing_protocol_handler.stderr
error[E0277]: the trait bound `MissingHandlerActor: lattice_actor::traits::Handler<Ping>` is not satisfied
  --> tests/ui/missing_protocol_handler.rs:30:36
   |
30 |     let _ = ServerProtocol::bind::<MissingHandlerActor>();
   |                                    ^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `lattice_actor::traits::Handler<Ping>` is not implemented for `MissingHandlerActor`
  --> tests/ui/missing_protocol_handler.rs:22:1
   |
22 | struct MissingHandlerActor;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `ServerProtocol::bind`
  --> tests/ui/missing_protocol_handler.rs:11:1
   |
11 | / actor_protocol! {
12 | |     ServerProtocol {
13 | |         protocol_id: 103;
14 | |         name: "compile/server/v1";
...  |
20 | | }
   | | ^
   | | |
   | |_required by a bound in this associated function
   |   required by this bound in `ServerProtocol::bind`
   = note: this error originates in the macro `$crate::actor_protocol` which comes from the expansion of the macro `actor_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)
